Fixes spacing in web component

--- a/src/Components/Games.scss
+++ b/src/Components/Games.scss
@@ -24,7 +24,10 @@
   cursor: pointer;
 }
 
-.project-container {
+.game-project-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   width: 35%;
   margin-left: 10%;
 }
