--- a/src/Components/WebProjects.scss
+++ b/src/Components/WebProjects.scss
@@ -1,6 +1,8 @@
 .web-container {
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
+  align-items: flex-start;
   margin-top: 20vh;
   margin-left: 15vw;
   width: 70vw;
@@ -28,9 +30,9 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
-  margin-left: 20px;
-  margin-right: 20px;
   margin-top: 20px;
+  margin-left: 2%;
+  margin-right: 2%;
 }
 
 .description {
@@ -41,6 +43,7 @@
 @media screen and (max-width: 1080px) {
   .web-container {
     flex-direction: column;
+    align-items: center;
   }
 
   p {
